--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -8,6 +8,12 @@ cleanup-ibc-test-containers:
 	done
 
 e2e-test: cleanup-ibc-test-containers
-	./scripts/run-e2e.sh $(suite) $(test)
+	./scripts/run-e2e.sh $(entrypoint) $(test)
 
-.PHONY: cleanup-ibc-test-containers e2e-test
+e2e-test-interchainswap-basic: cleanup-ibc-test-containers
+	./scripts/run-e2e.sh TestInterchainswapTestSuite TestBasicMsgPacket
+
+compatibility-tests:
+	./scripts/run-compatibility-tests.sh $(release_branch)
+
+.PHONY: cleanup-ibc-test-containers e2e-test compatibility-tests
