add make command to run e2e tests for atomic swap

--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -13,6 +13,9 @@ e2e-test: cleanup-ibc-test-containers
 e2e-test-interchainswap-basic: cleanup-ibc-test-containers
 	./scripts/run-e2e.sh TestInterchainswapTestSuite TestBasicMsgPacket
 
+e2e-test-atomicswap-basic: cleanup-ibc-test-containers
+	./scripts/run-e2e.sh TestAtomicSwapTestSuite TestMakeSwap
+
 compatibility-tests:
 	./scripts/run-compatibility-tests.sh $(release_branch)
 
