--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -15,6 +15,10 @@ e2e-test-interchainswap-basic: cleanup-ibc-test-containers
 
 e2e-test-interchainswap-pool: cleanup-ibc-test-containers
 	./scripts/run-e2e.sh TestInterchainswapTestSuite TestPoolStatus
+	
+
+e2e-test-interchainswap-single: cleanup-ibc-test-containers
+	./scripts/run-e2e.sh TestInterchainswapTestSuite TestSingleDepositStatus
 
 e2e-test-interchainswap-double: cleanup-ibc-test-containers
 	./scripts/run-e2e.sh TestInterchainswapTestSuite TestDoubleDepositStatus
