--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -28,6 +28,10 @@ e2e-test-interchainswap-timeout: cleanup-ibc-test-containers
 	./scripts/run-e2e.sh TestInterchainswapTestSuite TestRefundMsgOnTimeoutPacket
 
 
+e2e-test-atomic-swap-base: cleanup-ibc-test-containers
+	./scripts/run-e2e.sh TestAtomicSwapTestSuite TestAtomicSwap_HappyPath
+
+
 e2e-test-atomic-swap: cleanup-ibc-test-containers
 	./scripts/run-e2e-atomic-swap.sh
 
