chore: chainge cli overflower issue

--- a/e2e/Makefile
+++ b/e2e/Makefile
@@ -34,6 +34,9 @@ e2e-test-interchainswap-multi-withdraw: cleanup-ibc-test-containers
 
 e2e-test-interchainswap-timeout: cleanup-ibc-test-containers
 	./scripts/run-e2e.sh TestInterchainswapTestSuite TestRefundMsgOnTimeoutPacket
+
+e2e-test-interchainswap-overflow: cleanup-ibc-test-containers
+	./scripts/run-e2e.sh TestInterchainswapTestSuite TestOverflow
 	
 e2e-test-atomic-swap-base: cleanup-ibc-test-containers
 	./scripts/run-e2e.sh TestAtomicSwapTestSuite TestAtomicSwap_HappyPath
